--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@tailwindcss/line-clamp": "^0.4.2",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
+    "tailwind-scrollbar": "^2.0.1",
     "tailwindcss": "^3.2.4"
   }
 }
